[package]
name = "request_with_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix = "0.13"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.137"
transistor = "1.3.11"
edn-rs = "*"
edn-derive = "*"